// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequirementContextSectionTest renders content from props 1`] = `
<DocumentFragment>
  <section
    class="requirementContextContainer"
  >
    <h3
      class="contextHeading"
    >
      Why it matters
    </h3>
    <p>
      WHY IT MATTERS CONTENT FOR TESTING'
    </p>
    <h3
      class="contextHeading"
    >
      Helpful resources
    </h3>
    <div
      class="contextLinks"
    >
      <mock-contentpanelbutton
        contenttitle="Info and examples"
        deps="[object Object]"
        reference="[object Object]"
      >
        Info and examples
      </mock-contentpanelbutton>
    </div>
  </section>
</DocumentFragment>
`;

exports[`RequirementContextSectionTest renders with helpfulResourceLinks 1`] = `
<DocumentFragment>
  <section
    class="requirementContextContainer"
  >
    <h3
      class="contextHeading"
    >
      Why it matters
    </h3>
    <p>
      WHY IT MATTERS CONTENT FOR TESTING'
    </p>
    <h3
      class="contextHeading"
    >
      Helpful resources
    </h3>
    <div
      class="contextLinks"
    >
      <mock-contentpanelbutton
        contenttitle="Info and examples"
        deps="[object Object]"
        reference="[object Object]"
      >
        Info and examples
      </mock-contentpanelbutton>
      <div
        class="helpLink"
      >
        <div
          class="ms-TooltipHost insightsTooltipHost root-109"
          role="none"
        >
          <a
            class="ms-Link insights-link insightsLink root-110"
            href="test-guidance-href"
            target="_blank"
          >
            test-guidance-text
          </a>
          <div
            hidden=""
            id="tooltip0"
            style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
          />
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
